[gd_scene load_steps=12 format=2]

[ext_resource path="res://PlayerBullet.gd" type="Script" id=1]
[ext_resource path="res://assets/Bullets/bullets2.png" type="Texture" id=2]
[ext_resource path="res://Hitbox.gd" type="Script" id=3]
[ext_resource path="res://assets/Bullets/PlayerBullets/Shotgun pellets/bullets3_2.png" type="Texture" id=4]
[ext_resource path="res://assets/FX/Player Caused FX/Slash FX #1/FXSlash1_02.png" type="Texture" id=5]
[ext_resource path="res://assets/Bullets/PlayerBullets/Shotgun pellets/bullets3_3.png" type="Texture" id=6]
[ext_resource path="res://assets/Bullets/PlayerBullets/Shotgun pellets/bullets3_4.png" type="Texture" id=7]
[ext_resource path="res://assets/Bullets/PlayerBullets/Shotgun pellets/pellets1_0.png" type="Texture" id=8]
[ext_resource path="res://assets/Bullets/PlayerBullets/Shotgun pellets/bullets3_1.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "base",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "laser",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "shotgun",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 7 ) ],
"loop": true,
"name": "shotgun_hit",
"speed": 30.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0156

[node name="PlayerBullet" type="Node2D"]
script = ExtResource( 1 )

[node name="PlayerBullet" type="AnimatedSprite" parent="."]
position = Vector2( 6, 6 )
scale = Vector2( 1.23438, 1.25089 )
frames = SubResource( 2 )
animation = "base"

[node name="PlayerBullet2" type="Sprite" parent="."]
visible = false
position = Vector2( 6, 6 )
scale = Vector2( 1.23438, 1.25089 )
z_index = 2
texture = ExtResource( 2 )

[node name="Hitbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 1 )

[node name="BulletTime" type="Timer" parent="."]
one_shot = true

[connection signal="animation_finished" from="PlayerBullet" to="." method="_on_PlayerBullet_animation_finished"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
[connection signal="timeout" from="BulletTime" to="." method="_on_BulletTime_timeout"]
